main/default/objects/SPC_Component_Relation__c/SPC_Component_Relation__c.object-meta.xml
<CustomObject>
    <label>SPC Component Relation</label>
    <nameField>
        <label>SPC Component Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPC Component Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>