main/default/objects/SPC_Component_Relation__c/fields/Is_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Select__c</fullName>
    <formula>CONTAINS(Relation_Type__c,&#39;Multi&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Multi Select</label>
    <type>Checkbox</type>
</CustomField>