main/default/objects/SPC_Component_Relation__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <formula>CONTAINS(Relation_Type__c,&#39;Required&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>