main/default/objects/SPC_Component_Relation__c/fields/Relation_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Relation_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Relation External ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>