main/default/objects/SPC_Component_Relation__c/fields/SPC_Component_1__c.field-meta.xml
<CustomField>
    <fullName>SPC_Component_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPC Component 1</label>
    <referenceTo>SPC_Component__c</referenceTo>
    <relationshipLabel>SPC Component 1 Relations</relationshipLabel>
    <relationshipName>SPC_Component_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>