main/default/objects/SPC_Component_Relation__c/fields/SPC_Component_2__c.field-meta.xml
<CustomField>
    <fullName>SPC_Component_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPC Component 2</label>
    <referenceTo>SPC_Component__c</referenceTo>
    <relationshipLabel>SPC Component Relations (SPC Component 2)</relationshipLabel>
    <relationshipName>SPC_Component_Relations_2</relationshipName>
    <type>Lookup</type>
</CustomField>